# rstdms-1

./: Cargo.toml
TestFiles/: TestFile_LE.tdms
src/: app.rs  main.rs
